# foodvision-bench

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: add_system.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  leaderboard.md
benchmarks/results/: 2025-11.json  2026-01.json  2026-04.json
docs/: adding-a-system.md  interpreting-mape.md  methodology.md  roadmap.md  test-sets.md  vendor-numbers-policy.md
examples/: add_custom_system.py  basic_evaluation.py
journal/: 2025-12-why-mape-over-absolute-kcal.md  2026-02-adding-commercial-apps.md  2026-04-reflections-after-six-months.md
src/foodvision_bench/: __init__.py  cli.py  core.py  metrics.py
src/foodvision_bench/data/: __init__.py  loader.py  test_sets.py
src/foodvision_bench/systems/: __init__.py  base.py  clip_baseline.py  siglip_baseline.py  vendor_adapters.py
src/foodvision_bench/systems/vendors/: __init__.py  _base.py  bitesnap.py  calorie_mama.py  cronometer.py  foodvisor.py  loseit.py  macrofactor.py  myfitnesspal.py  noom.py  platelens.py
tests/: test_cli.py  test_metrics.py  test_systems.py
